# rx

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: init.lua
scripts/catppuccin/: init.lua
scripts/git/: init.lua  utils.lua
src/: error.rs  explorer.rs  file_ops.rs  history.rs  icons.rs  input.rs  main.rs  modes.rs  prompt.rs  search.rs  state.rs  terminal.rs  theme.rs
src/config/: mod.rs  screen.rs
src/lua/: mod.rs
src/ui/: mod.rs
