[package]
name = "rx-explorer"
version = "0.1.0"
edition = "2024"
authors = ["Romain Croughs <romain.croughs@gmail.com>"]
description = "A terminal-based file explorer"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rcroughs/rx"
keywords = ["terminal", "file-explorer", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "rx"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
chrono = "0.4.40"
dirs = "6.0.0"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.35", features = ["derive"] }
mlua = { version = "0.10.3", features = ["lua54"] }
unicode-width = "0.2.0"